# python-api

./: CHANGELOG.md  LICENSE  README.md  SECURITY.md
client-rpc/: LICENSE  pyproject.toml
client-rpc/src/: bookmap_test.py  pyproject.toml
client-rpc/src/bookmap/: __init__.py  bookmap.py  dto.py
client-rpc/src/bookmap/sortedcontainers/: __init__.py  sortedlist.py  sortedset.py
client-rpc/tests/: bookmap_test.py
developer-addon/: .gitignore  Dockerfile  README.md  build.gradle
developer-addon/buildSrc/: build.gradle
developer-addon/buildSrc/src/main/groovy/: com.bookmap.layer0.common-conventions.gradle
developer-addon/buildSrc/src/main/resources/: checkstyle.xml
developer-addon/src/main/java/com/bookmap/python/api/addon/: DeveloperAddon.java
developer-addon/src/main/resources/: cvd_addon.py  hello_world.py  liquidity_tracker.py  mbo_test.py  order_book_test.py
examples/: broadcasting_signals.py  cvd_addon.py  hello_world.py  liquidity_tracker.py  mbo_test.py  order_book_test.py  sample_trading_strategy.py  simple_market_maker.py
serverside-rpc/: .gitignore  build.gradle  settings.gradle
serverside-rpc/src/main/resources/bookmap/: __init__.py  bookmap.py  dto.py
serverside-rpc/src/main/resources/bookmap/sortedcontainers/: sorteddict.py
serverside-rpc/src/test/java/integrational/: AddonVsPythonCommunicationSimulationTest.java
serverside-rpc/src/test/java/integrational/utils/: Channel.java  TestApiWrapper.java
serverside-rpc/src/test/resources/integrational/: data_requests.txt  indicators_creation_events.txt
(+215 files in other folders)
