[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bookmap"
version = "0.0.1"
authors = [
    { name="Mykyta Leonov", email="mykytal@bookmap.com" },
]
description = "Python implementation of L1 API library"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "sortedcontainers == 2.4.0"
]

[tool.setuptools.packages]
find = {}